<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_search"
        android:title="@string/menu_main_search"
        android:icon="@drawable/ic_search_white"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
    />

    <item
        android:id="@+id/menu_main_sort"
        android:icon="@drawable/ic_sort_white"
        android:title="@string/menu_main_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_main_rename_bookshelf"
        android:title="@string/menu_main_rename_bookshelf"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_main_delete_bookshelf"
        android:title="@string/menu_main_delete_bookshelf"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_main_rename_label"
        android:title="@string/menu_main_rename_label"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_main_delete_label"
        android:title="@string/menu_main_delete_label"
        app:showAsAction="never" />


</menu>