<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_info_retrieval">
            <ListPreference
                android:title="@string/settings_web_services_title"
                android:key="settings_pref_web_services"
                android:entries="@array/settings_web_services_entries"
                android:entryValues="@array/settings_web_services_entry_values"
                android:defaultValue="1"/>
            <CheckBoxPreference
                android:title="@string/settings_auto_complete_website_title"
                android:key="settings_pref_acwebsite"
                android:defaultValue="true"/>

    </PreferenceCategory>
</PreferenceScreen>