<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="12dp"
              android:layout_marginTop="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="12dp">

        <ImageView
            android:id="@+id/book_cover_image_view"
            android:layout_width="90dp"
            android:layout_height="140dp"
            android:scaleType="centerInside"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/book_cover_image_view_hint"
            android:cropToPadding="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="4dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_title_text_view"
                android:labelFor="@+id/book_title_edit_text"/>

            <EditText
                android:id="@id/book_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_author_text_view"
                android:labelFor="@+id/book_author_edit_text"/>

            <EditText
                android:id="@id/book_author_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/translator_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_translator_text_view"
                android:labelFor="@+id/book_translator_edit_text"/>

            <EditText
                android:id="@id/book_translator_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_publisher_text_view"
                android:labelFor="@+id/book_publisher_edit_text"/>

            <EditText
                android:id="@id/book_publisher_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_pubdate_text_view"
                android:labelFor="@+id/book_pubdate_edit_text"/>

            <EditText
                android:id="@id/book_pubdate_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:inputType="date"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_isbn_text_view"
                android:labelFor="@+id/book_isbn_edit_text"/>

            <EditText
                android:id="@id/book_isbn_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:inputType="text"/>
        </LinearLayout>







    </LinearLayout>





</LinearLayout>